--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Interface Grafica/Projeto formulario/nbproject/private/
 /Interface Grafica/Projeto formulario/build/
 /Interface Grafica/Formulario/dist/
+/Interface Grafica/Formulario/nbproject/private/
+/Interface Grafica/Formulario/build/
