--- a/Interface Grafica/Formulario/nbproject/private/private.properties
+++ b/Interface Grafica/Formulario/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\SENAI\\Documents\\ALUNO\\Eduardo\\Projetos-Senai\\Interface Grafica\\Drivers\\mysql-connector-java-5.1.18
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\SENAI\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\eduar\\AppData\\Roaming\\NetBeans\\21\\build.properties
