--- a/Interface Grafica/Formulario/nbproject/project.properties
+++ b/Interface Grafica/Formulario/nbproject/project.properties
@@ -40,8 +40,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
