--- a/tcc/aplicacao/interfaces/package.json
+++ b/tcc/aplicacao/interfaces/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.0.9",
-    "lucide": "^0.477.0",
-    "tailwindcss": "^4.0.9"
+    "lucide": "^0.477.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.0.10"
   }
 }
